# 2025_kidbook

./: .gitignore  README.md  add_links_to_pages.py  delete_links.py  fetch_data_from_wikidata.py  nn_api.py  pyproject.toml  readme.md  requirements.txt  script.py  visual.md
.obsidian/: workspace.json
KIDBOOK/entertainment/video_games/: additional_reality.md  computer_game.md  eSport.md  eSport.md~  game_character.md  game_developers.md  game_engine.md  game_engines.md  game_janr.md  game_mechanics.md  game_publisher.md  gamification.md  gaming_community.md  gaming_community.md~  gaming_platform.md  multiplayer_mode.md  publisher.md  story.md  vr.md
WORK/: concepts.json  giga.py  link.py
WORK/cod/: AI_key.py  main,py
WORK/world/science/: .gitignore  Readme.md  Report.md  concepts.json  generate_articles.py  links.py  main.py  pyproject.toml
WORK/world/science/modules/: config.py  create_md.py  explanation.py  links.py  wiki_content.py
pages/: allergen.md  allergies.md  antibiotics.md  antiviral.md  arthritis.md  asthma.md  autoimmune.md  autoimmune_diseases.md  backache.md  bacterial_infections.md  bronchitis.md  chest_ache.md  chronic_diseases.md  cough.md  covid.md  fever.md  fungal_diseases.md  genetic_diseases.md  gripp.md  headache.md  immune_diseases.md  infectious_diseases.md  main.md  meningitis.md  otitis.md  pain.md  parasitic_diseases.md  pneumonia.md  prevention.md  rabies.md  rubella.md  shortness_of_breath.md  symptoms.md  tonsillitis.md  treatment_methods.md  tuberculosis.md  vaccin.md  vaccination.md  viral_diseases.md  virus.md  (+66 more)
(+1140 files in other folders)
