[project]
name = "science"
version = "0.1.0"
description = "Add your description here"
readme = "Report.md"
requires-python = ">=3.13"
dependencies = [
    "gigachat>=0.1.39.post1",
    "pydantic>=2.11.1",
    "pydantic-settings>=2.8.1",
    "pymorphy3>=2.0.3",
    "razdel>=0.5.0",
    "tqdm>=4.67.1",
    "wikipedia>=1.4.0",
]
